# telegram_assistant_bot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  dev.py  docker-compose.yml  pyproject.toml  test_audio.oga  test_speech.oga  test_speech_ru.oga
app/: config.py  main.py
app/agents/: __init__.py  task_management_agent.py
app/prompts/: __init__.py  extract_tasks.py
app/services/: __init__.py  gigachat_service.py  google_calendar.py  local_llm_service.py  speech_to_text_service.py
